improvement/styles - Fixed breadcrumb size on smaller screens

--- a/wp-content/themes/ivy-school-child/style.css
+++ b/wp-content/themes/ivy-school-child/style.css
@@ -72,7 +72,6 @@ body.left_courses .wrapper-item-course .item-course .text .teacher .ava {
     font-size: 26px;
 }
 
-/*  */
 .item-course .pic img {
     width: 100%;
 }
@@ -103,7 +102,7 @@ body.left_courses .wrapper-item-course .item-course .text .teacher .ava {
 }
 
 .breadcrumbs-wrapper .container { 
-    min-width: 1330px;
+    min-width: 100%;
 }
 
 footer.site-footer .footer .container .footer-sidebars.row > div {
